--- a/contacts.html
+++ b/contacts.html
@@ -42,5 +42,17 @@
         <a href="https://www.instagram.com/krxzxa/" target="_blank"><i class="fab fa-instagram"></i><img src="1491579602-yumminkysocialmedia36_83067.png"></a>
         <a href="https://twitter.com/keemants" target="_blank"><i class="fab fa-twitter"><img src="Logo_of_Twitter.svg.png"></i></a>
     </div>
+    <h1> This is where we located: </h1>
+    <div class="map-container">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3860.085627210371!2d121.07518317457377!3d14.651080575839849!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3397b7bcc0c144e7%3A0xb8fc47c1c0c64cf9!2sAlley%2018%20Pansol!5e0!3m2!1sen!2sph!4v1706367662426!5m2!1sen!2sph" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    
     </body>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Beanzu. All rights reserved.</p>
+            <p><a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a></p>
+            <p>Contact: <a href="mailto:info@yourwebsite.com">beanzu@gmail.com</a></p>
+        </div>
+    </footer>
 </html>
