--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoirt" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Beanzu: Cafe and Shih Tzu </title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="master.css">
@@ -28,4 +28,11 @@
             </div>
         </div>
     </body>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Beanzu. All rights reserved.</p>
+            <p><a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a></p>
+            <p>Contact: <a href="mailto:info@yourwebsite.com">beanzu@gmail.com</a></p>
+        </div>
+    </footer>
 <html>
