--- a/partners.html
+++ b/partners.html
@@ -4,6 +4,14 @@
         <title>Beanzu: Partners</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+        </style>
         <link rel="stylesheet" href="master.css">
         <link rel="stylesheet" href="partners.style.css">
     </head>
@@ -54,5 +62,14 @@
                 <div class="image-box">
                     <a href="https://dizonfarms.net/"> <img src="dizon farms.jpg" alt="Dizon Farms"> </a>
                 </div>
+                </div>
     </body>
+    <footer>
+        <div class="footer-content">
+            <p>&copy; 2024 Beanzu. All rights reserved.</p>
+            <p><a href="/terms">Terms of Service</a> | <a href="/privacy">Privacy Policy</a></p>
+            <p>Contact: <a href="mailto:info@yourwebsite.com">beanzu@gmail.com</a></p>
+        </div>
+    </footer>
+
 </html>
